successful avg hi, low, and precip counts added

--- a/Best Party Days.ipynb
+++ b/Best Party Days.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -852,7 +854,7 @@
        "[1090 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,18 +862,251 @@
    "source": [
     "all_weather = sqlite3.connect(\"Weather_summary.db\")\n",
     "potential_days = pd.read_sql_query(\"SELECT MM_DD, Year, apparentTemperatureHigh, apparentTemperatureLow, precipAccumulation FROM 'weather summary'\",all_weather)\n",
+    "precip_days = pd.read_sql_query(\"SELECT MM_DD,precipAccumulation FROM 'weather summary'\",all_weather)\n",
     "potential_days"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precipAccumulation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MM_DD</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>01-05</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-06</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-12</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-13</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-19</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       precipAccumulation\n",
+       "MM_DD                    \n",
+       "01-05                   1\n",
+       "01-06                   0\n",
+       "01-12                   1\n",
+       "01-13                   1\n",
+       "01-19                   0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#precipitation boolean\n",
+    "precip_days = pd.read_sql_query(\"SELECT MM_DD,precipAccumulation FROM 'weather summary'\",all_weather)\n",
+    "#total_precip = precip_days.groupby('MM_DD')\n",
+    "#precip_count = total_precip.count()\n",
+    "precip_bool = precip_days.groupby('MM_DD').count()\n",
+    "#precip_bool = precip_count.precipAccumulation\n",
+    "precip_bool.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>apparentTemperatureHigh</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MM_DD</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>01-05</th>\n",
+       "      <td>35.192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-06</th>\n",
+       "      <td>30.790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-12</th>\n",
+       "      <td>41.668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-13</th>\n",
+       "      <td>34.858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-19</th>\n",
+       "      <td>41.471</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       apparentTemperatureHigh\n",
+       "MM_DD                         \n",
+       "01-05                   35.192\n",
+       "01-06                   30.790\n",
+       "01-12                   41.668\n",
+       "01-13                   34.858\n",
+       "01-19                   41.471"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#groupby MM_DD avg high\n",
+    "hi_days = pd.read_sql_query(\"SELECT MM_DD, apparentTemperatureHigh FROM 'weather summary'\",all_weather)\n",
+    "avg_hi_days = hi_days.groupby('MM_DD').mean()\n",
+    "avg_hi_days.head()\n",
     "#groupby MM_DD avg Low"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>apparentTemperatureLow</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MM_DD</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>01-05</th>\n",
+       "      <td>18.625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-06</th>\n",
+       "      <td>16.188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-12</th>\n",
+       "      <td>24.698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-13</th>\n",
+       "      <td>22.158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01-19</th>\n",
+       "      <td>29.881</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       apparentTemperatureLow\n",
+       "MM_DD                        \n",
+       "01-05                  18.625\n",
+       "01-06                  16.188\n",
+       "01-12                  24.698\n",
+       "01-13                  22.158\n",
+       "01-19                  29.881"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#groupby MM_DD avg Low\n",
+    "low_days = pd.read_sql_query(\"SELECT MM_DD, apparentTemperatureLow FROM 'weather summary'\",all_weather)\n",
+    "avg_low_days = low_days.groupby('MM_DD').mean()\n",
+    "avg_low_days.head()"
    ]
   }
  ],
