--- a/Best Party Days.ipynb
+++ b/Best Party Days.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  command for adding csv to weather_summary.db\n",
     "weather_summary_dataframe = pd.read_csv('weather_summary_dataframe.csv')\n",
-    "weather_summary_dataframe.to_sql(\"weather summary\",sqlite3.connect(\"Weather_summary.db\"), if_exists =\"replace\")\n"
+    "weather_summary_dataframe.to_sql(\"weather_summary\",sqlite3.connect(\"weather_summary.db\"), if_exists =\"replace\")\n"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -265,13 +265,13 @@
        "01-19           2"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "precip_days = pd.read_sql_query(\"SELECT MM_DD, precipType FROM 'weather summary' WHERE precipType != 'None'\",all_weather)\n",
+    "precip_days = pd.read_sql_query(\"SELECT MM_DD, precipType FROM 'weather summary' WHERE precipType != 'None'\", sqlite3.connect(\"weather_summary.db\"))\n",
     "precip_count = precip_days.groupby('MM_DD').count()\n",
     "precip_count.head()"
    ]
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -358,13 +358,13 @@
        "01-19                   41.471                  29.881"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hi_low_days = pd.read_sql_query(\"SELECT MM_DD, apparentTemperatureHigh, apparentTemperatureLow FROM 'weather summary'\",all_weather)\n",
+    "hi_low_days = pd.read_sql_query(\"SELECT MM_DD, apparentTemperatureHigh, apparentTemperatureLow FROM 'weather summary'\",sqlite3.connect(\"weather_summary.db\"))\n",
     "avg_hi_low_days = hi_low_days.groupby('MM_DD').mean()\n",
     "avg_hi_low_days.head()"
    ]
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "01-19                   41.471                  29.881           2"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -579,7 +579,7 @@
        "05-04                   71.899                  53.745           6"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 43,
    "metadata": {
     "scrolled": false
    },
