--- a/Best Party Days.ipynb
+++ b/Best Party Days.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -265,13 +265,13 @@
        "01-19           2"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "precip_days = pd.read_sql_query(\"SELECT MM_DD, precipType FROM 'weather summary' WHERE precipType != 'None'\", sqlite3.connect(\"weather_summary.db\"))\n",
+    "precip_days = pd.read_sql_query(\"SELECT MM_DD, precipType FROM 'weather_summary' WHERE precipType != 'None'\", sqlite3.connect(\"weather_summary.db\"))\n",
     "precip_count = precip_days.groupby('MM_DD').count()\n",
     "precip_count.head()"
    ]
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -358,13 +358,13 @@
        "01-19                   41.471                  29.881"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hi_low_days = pd.read_sql_query(\"SELECT MM_DD, apparentTemperatureHigh, apparentTemperatureLow FROM 'weather summary'\",sqlite3.connect(\"weather_summary.db\"))\n",
+    "hi_low_days = pd.read_sql_query(\"SELECT MM_DD, apparentTemperatureHigh, apparentTemperatureLow FROM 'weather_summary'\",sqlite3.connect(\"weather_summary.db\"))\n",
     "avg_hi_low_days = hi_low_days.groupby('MM_DD').mean()\n",
     "avg_hi_low_days.head()"
    ]
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "01-19                   41.471                  29.881           2"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -579,7 +579,7 @@
        "05-04                   71.899                  53.745           6"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
