fixing some import and constant redundancies

--- a/Best Party Days.ipynb
+++ b/Best Party Days.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,18 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "import sqlite3\n",
-    "\n",
-    "DS_API_KEY = \"00b999d3b38cbf3fd6f7c14b01244f79\"\n",
-    "LAT = \"38.2535367\"\n",
-    "LONG = \"-85.7481863\"\n",
-    "\n",
     "def request_loop(list,year,years_back):\n",
     "    starting_year = int(year)- years_back\n",
     "    ending_year = int(year)\n",
@@ -143,9 +135,7 @@
     "    weather_summary_dataframe[\"Year\"]= year_list\n",
     "    weather_summary_dataframe.to_csv('weather_summary_dataframe.csv')\n",
     "    weather_summary_dataframe.to_sql(\"weather summary\",sqlite3.connect(\"Weather_summary.db\"), if_exists =\"replace\")\n",
-    "    return weather_summary_dataframe\n",
-    "    \n",
-    "\n"
+    "    return weather_summary_dataframe"
    ]
   },
   {
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -274,7 +264,7 @@
        "01-19           2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +357,7 @@
        "01-19                   41.471                  29.881"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +457,7 @@
        "01-19                   41.471                  29.881           2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -588,7 +578,7 @@
        "05-04                   71.899                  53.745           6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -646,7 +636,7 @@
     "plt.xlabel(\"Recommended Dates\", fontsize = 12)\n",
     "plt.ylabel(\"Precipitation Events Over Past \"+ str(years_back) + \" Years\", fontsize = 12)\n",
     "plt.bar(ideal_days.index, ideal_days.precipType, color = \"blue\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
