--- a/Best Party Days.ipynb
+++ b/Best Party Days.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,18 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\james\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2130: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  dtype=dtype)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  command for adding csv to weather_summary.db\n",
     "weather_summary_dataframe = pd.read_csv('weather_summary_dataframe.csv')\n",
@@ -196,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -264,14 +255,17 @@
        "01-19           2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "precip_days = pd.read_sql_query(\"SELECT MM_DD, precipType FROM 'weather_summary' WHERE precipType != 'None'\", sqlite3.connect(\"weather_summary.db\"))\n",
-    "precip_count = precip_days.groupby('MM_DD').count()\n",
+    "try:\n",
+    "    precip_days = pd.read_sql_query(\"SELECT MM_DD, precipType FROM 'weather_summary' WHERE precipType != 'None'\", sqlite3.connect(\"weather_summary.db\"))\n",
+    "    precip_count = precip_days.groupby('MM_DD').count()\n",
+    "except KeyError:\n",
+    "    print(\"Something went wrong:  Your pandas version may need to be updated (version 0.14 or later) to run this code correctly\")\n",
     "precip_count.head()"
    ]
   },
@@ -284,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +351,7 @@
        "01-19                   41.471                  29.881"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +451,7 @@
        "01-19                   41.471                  29.881           2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -578,7 +572,7 @@
        "05-04                   71.899                  53.745           6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {
     "scrolled": false
    },
