SQL to pd.df KeyError msg tweak

--- a/Best Party Days.ipynb
+++ b/Best Party Days.ipynb
@@ -265,7 +265,7 @@
     "    precip_days = pd.read_sql_query(\"SELECT MM_DD, precipType FROM 'weather_summary' WHERE precipType != 'None'\", sqlite3.connect(\"weather_summary.db\"))\n",
     "    precip_count = precip_days.groupby('MM_DD').count()\n",
     "except KeyError:\n",
-    "    print(\"Something went wrong:  Your pandas version may need to be updated (version 0.14 or later) to run this code correctly\")\n",
+    "    print(\"Something went wrong:  Your pandas library may need to be updated (version 0.14 or later) to run this code correctly\")\n",
     "precip_count.head()"
    ]
   },
